[#847] Fixes the "Body" placeholder issue that isn't moving to body when clicked
The hidden label was overlapping the placeholder and this was preventing the
user to click

--- a/web-ui/app/scss/views/_compose-view.scss
+++ b/web-ui/app/scss/views/_compose-view.scss
@@ -151,12 +151,14 @@
         transition: all 0.1s linear;
         opacity: 0;
         font-weight: bold;
+        display: none;
     }
 
     label.showfloatlabel {
         color: $light_blue !important;
         top: -0.3rem;
         opacity: 1;
+        display: block;
     }
 
     input, textarea {
